--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+我们要根据阵容，国籍，阵营，父母的社会地位以及自己的社会地位进行区分，该怎么写？为每一个背景都匹配三个故事。比如Tiamanther守序善良的,父母为贫民自己为贵族的战士匹配三个故事,etc
+
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -531,39 +533,21 @@
             // 基于用户选择生成三个模拟模板
             // 实际应用中，这里可以根据职业和阵营进行复杂的if/else分支
             charData.backgroundTemplates = [
-const backgroundDatabase = {
-    // 格式为 "国籍-阵营-职业"
-    "tiamanther-Lawful Good-fighter": [
-        { title: "帝国黎明骑士", description: "..." },
-        { title: "退役金龙军官", description: "..." },
-        { title: "誓约守护者", description: "..." }
-    ],
-    "tiamanther-Lawful Good-ranger": [
-        { title: "行省边境巡逻官", description: "..." },
-        { title: "皇家猎场看守", description: "..." },
-        { title: "圣地向导", description: "..." }
-    ],
-    // 兜底默认值 (当匹配不到精确组合时使用)
-    "default": [
-        { title: "平民英雄", description: "..." },
-        { title: "无名士兵", description: "..." },
-        { title: "乱世幸存者", description: "..." }
-    ]
-};
+                {
+                    title: "帝国的利刃",
+                    description: "你曾在军队或准军事组织中服役。虽然因为某种原因离开了建制，但你依然保持着军人的纪律与效率。适合守序阵营的角色。"
+                },
+                {
+                    title: "荒野的幸存者",
+                    description: "在提亚曼瑟严酷的自然环境或战乱的边境中长大。你学会了不惜一切代价活下去，无论手段是否光彩。适合中立或混乱阵营的角色。"
+                },
+                {
+                    title: "古老秘密的追寻者",
+                    description: "你对这片土地下埋藏的历史比对当前的战争更感兴趣。也许是为了力量，也许是为了知识，你踏上了旅途。适合法系或智力型角色。"
+                }
+            ];
 
-// 2. 在生成逻辑中提取
-function getTemplates(nationality, alignment, className) {
-    // 生成唯一的复合索引 Key
-    const key = `${nationality}-${alignment}-${className}`;
-    
-    // 从数据库中提取，如果找不到完全匹配的，就返回默认值
-    return backgroundDatabase[key] || backgroundDatabase["default"];
-}
-
-// 3. 应用到你的 charData
-const templates = getTemplates(charData.nationality, charData.alignment, charData.class);
-charData.backgroundTemplates = templates;
-			charData.backgroundTemplates.forEach((bg, index) => {
+            charData.backgroundTemplates.forEach((bg, index) => {
                 const bgCard = document.createElement('div');
                 bgCard.className = 'option-card';
                 bgCard.innerHTML = `
@@ -601,17 +585,16 @@ charData.backgroundTemplates = templates;
             
             // 获取用户选中的背景模板
             const selectedBg = charData.backgroundTemplates[charData.selectedBackgroundIndex];
-	    	const abilityMod = (score) => Math.floor((score - 10) / 2);
+	const abilityMod = (score) => Math.floor((score - 10) / 2);
 	const formatMod = (score) => {
         const mod = abilityMod(score);
         return mod >= 0 ? `+${mod}` : `${mod}`;
     };
-
             // 简单的属性分配逻辑
             let abilities = {
                 '力量': 16, '敏捷': 15, '体质': 15, '智力': 10, '感知': 10, '魅力': 8
             };
-            let skillsText = "察觉, 运动"; // 默认技能
+            let skillsText = "察觉, 运动";
             if (['fighter', 'barbarian'].includes(charData.class)) {
                 abilities = { '力量':17, '敏捷':15, '体质':17, '智力':8, '感知':10, '魅力':10 };
                 skillsText = "运动, 威吓, 求生"
@@ -651,6 +634,11 @@ charData.backgroundTemplates = templates;
 
 // 2. 计算 3 级血量 (1级满值 + 后两级平均值 + 3倍体质修正)
 	const totalHP = die + (Math.floor(die / 2) + 1) * 2 + (cMod * 3);
+            const abilityMod = (score) => Math.floor((score - 10) / 2);
+            const formatMod = (score) => {
+                const mod = abilityMod(score);
+                return mod >= 0 ? `+${mod}` : `${mod}`;
+            };
 
             let equipment = '探险者套装，职业起始武器，普通旅行衣物，50gp';
             if (charData.isSquire) {
@@ -835,6 +823,4 @@ ${ally.desc}
         };
     </script>
 </body>
-
 </html>
-
